--- a/src/main/resources/templates/admin/edit-product.html
+++ b/src/main/resources/templates/admin/edit-product.html
@@ -16,23 +16,18 @@
 </header>
 <main>
     <h2>Редактировать продукт</h2>
-    <form th:action="@{/admin/edit-product/{id}(id=${product.id})}" method="post">
-        <div>
-            <label for="name">Название:</label>
-            <input type="text" id="name" name="name" th:value="${product.name}" required/>
-        </div>
-        <div>
-            <label for="description">Описание:</label>
-            <textarea id="description" name="description" required th:text="${product.description}"></textarea>
-        </div>
-        <div>
-            <label for="price">Цена:</label>
-            <input type="number" id="price" name="price" step="0.01" th:value="${product.price}" required/>
-        </div>
-        <div>
-            <label for="imageUrl">URL изображения:</label>
-            <input type="text" id="imageUrl" name="imageUrl" th:value="${product.imageUrl}" required/>
-        </div>
+    <form th:action="@{/admin/products/{productId}/edit(productId=${product.id})}" th:object="${product}" method="post">
+        <input type="hidden" th:field="*{id}" />
+
+        <label for="name">Название:</label>
+        <input type="text" id="name" th:field="*{name}" /><br /><br />
+
+        <label for="description">Описание:</label>
+        <textarea id="description" th:field="*{description}"></textarea><br /><br />
+
+        <label for="price">Цена:</label>
+        <input type="text" id="price" th:field="*{price}" /><br /><br />
+
         <button type="submit">Сохранить</button>
     </form>
 </main>
